add hamburger menu add JS

--- a/club_auto/css/style.css
+++ b/club_auto/css/style.css
@@ -17,7 +17,7 @@ header {
 }
 @media screen and (max-width: 768px) {
   header {
-    justify-content: flex-start;
+    justify-content: space-between;
     padding-left: 30px;
   }
 }
@@ -76,6 +76,25 @@ address {
   height: 40px;
 }
 
+#hamMenu {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  background-image: url(../images/Ham-menu.jpg);
+  background-size: cover;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  #hamMenu {
+    display: block;
+    margin-right: 20px;
+  }
+}
+#hamMenu:hover {
+  opacity: 80%;
+}
+
 .rs {
   display: flex;
   margin-right: 100px;
@@ -101,7 +120,7 @@ address {
   font-weight: bold;
 }
 
-nav {
+#nav {
   width: 95%;
   height: 60px;
   margin: auto;
@@ -111,26 +130,30 @@ nav {
   justify-content: flex-end;
   align-items: center;
 }
-nav a {
+#nav a {
   height: 100%;
+  border-radius: 30px;
   text-decoration: none;
   color: #232628;
   font-family: montserrat, Arial, Helvetica, sans-serif;
   font-weight: bolder;
   padding: 15px;
 }
-nav a:hover {
+#nav a:hover {
   background-color: rgba(204, 97, 25, 0.4588235294);
 }
 @media screen and (max-width: 768px) {
-  nav {
+  #nav {
+    height: 100%;
     display: none;
+    flex-direction: column;
+    padding: 10px;
   }
 }
 
-.activeLink {
+#activeLink {
   background-color: #cc6119;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 .vehicule1 {
@@ -141,6 +164,10 @@ nav a:hover {
   .vehicule1 {
     display: none;
   }
+}
+
+.imageVehicule1 {
+  width: 100%;
 }
 
 .title {
@@ -184,6 +211,14 @@ h2 {
 .content {
   width: 600px;
   padding: 20px;
+}
+
+.clients {
+  width: 100%;
+}
+
+.entretien {
+  width: 100%;
 }
 
 li {
@@ -244,6 +279,7 @@ li {
   padding: 50px;
   background-color: rgba(255, 72, 72, 0.7137254902);
   color: #ffffff;
+  font-family: "Open Sans", Arial;
   position: relative;
   top: 100px;
   right: -150px;
@@ -400,9 +436,10 @@ article {
   padding: 20px;
   margin: auto;
   display: flex;
+  font-family: "Open Sans", Arial;
 }
 .arguments h3 {
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: montserrat, Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
   font-weight: 900;
 }
@@ -443,6 +480,7 @@ article {
 }
 .cta a {
   color: #ffffff;
+  font-family: "Open Sans", Arial;
   text-decoration: none;
 }
 .cta:hover {
@@ -471,9 +509,10 @@ article {
   position: relative;
   top: 100px;
   left: 230px;
+  font-family: "Open Sans", Arial;
 }
 .retail h2 {
-  font-family: montserrat, Arial, Helvetica, sans-serif;
+  font-family: montserrat, Arial;
   font-weight: 900;
 }
 .retail span {
@@ -582,6 +621,7 @@ footer p {
 .rss {
   width: 40px;
   height: 40px;
+  margin-bottom: 5px;
 }
 
 #rssBtn {
