--- a/club_auto/css/style.scss
+++ b/club_auto/css/style.scss
@@ -16,7 +16,7 @@ header {
   font-family: montserrat, Arial, Helvetica, sans-serif;
   color: #ffffff;
   @media screen and (max-width: 768px) {
-    justify-content: flex-start;
+    justify-content: space-between;
     padding-left: 30px;
   }
   @media screen and (min-width: 768px) and (max-width: 1400px) {
@@ -67,6 +67,23 @@ address {
   height: 40px;
 }
 
+#hamMenu {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  background-image: url(../images/Ham-menu.jpg);
+  background-size: cover;
+  display: none;
+  @media screen and (max-width: 768px) {
+    display: block;
+    margin-right: 20px;
+  }
+  &:hover {
+    opacity: 80%;
+  }
+}
+
 .rs {
   display: flex;
   margin-right: 100px;
@@ -88,7 +105,7 @@ address {
   font-weight: bold;
 }
 
-nav {
+#nav {
   width: 95%;
   height: 60px;
   margin: auto;
@@ -99,6 +116,7 @@ nav {
   align-items: center;
   & a {
     height: 100%;
+    border-radius: 30px;
     text-decoration: none;
     color: #232628;
     font-family: montserrat, Arial, Helvetica, sans-serif;
@@ -109,13 +127,16 @@ nav {
     }
   }
   @media screen and (max-width: 768px) {
+    height: 100%;
     display: none;
+    flex-direction: column;
+    padding: 10px;
   }
 }
 
-.activeLink {
+#activeLink {
   background-color: #cc6119;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 .vehicule1 {
@@ -124,6 +145,10 @@ nav {
   @media screen and (max-width: 768px) {
     display: none;
   }
+}
+
+.imageVehicule1 {
+  width: 100%;
 }
 
 .title {
@@ -165,6 +190,14 @@ h2 {
 .content {
   width: 600px;
   padding: 20px;
+}
+
+.clients {
+  width: 100%;
+}
+
+.entretien {
+  width: 100%;
 }
 
 li {
@@ -218,6 +251,7 @@ li {
   padding: 50px;
   background-color: #ff4848b6;
   color: #ffffff;
+  font-family: "Open Sans", Arial;
   position: relative;
   top: 100px;
   right: -150px;
@@ -355,8 +389,9 @@ article {
   padding: 20px;
   margin: auto;
   display: flex;
+  font-family: "Open Sans", Arial;
   & h3 {
-    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    font-family: montserrat, Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     font-weight: 900;
   }
@@ -391,6 +426,7 @@ article {
   justify-content: center;
   & a {
     color: #ffffff;
+    font-family: "Open Sans", Arial;
     text-decoration: none;
   }
   &:hover {
@@ -418,8 +454,9 @@ article {
   position: relative;
   top: 100px;
   left: 230px;
+  font-family: "Open Sans", Arial;
   & h2 {
-    font-family: montserrat, Arial, Helvetica, sans-serif;
+    font-family: montserrat, Arial;
     font-weight: 900;
   }
   & span {
@@ -511,6 +548,7 @@ footer {
 .rss {
   width: 40px;
   height: 40px;
+  margin-bottom: 5px;
 }
 
 #rssBtn {
