add contact.html add contact.css

--- a/club_auto/css/style.css
+++ b/club_auto/css/style.css
@@ -3,6 +3,11 @@
 html {
   margin-top: 40px;
 }
+@media screen and (max-width: 768px) {
+  html {
+    margin-top: 10px;
+  }
+}
 
 header {
   width: 95%;
