--- a/club_auto/css/style.css
+++ b/club_auto/css/style.css
@@ -116,7 +116,7 @@ address {
   border-radius: 50%;
 }
 .logoRs:hover {
-  border: 1px solid #ffffff;
+  border: 2px solid #ffffff;
 }
 
 .textOrange {
@@ -134,6 +134,9 @@ address {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 2;
 }
 #nav a {
   height: 100%;
@@ -157,6 +160,7 @@ address {
     display: none;
     flex-direction: column;
     padding: 10px;
+    position: static;
   }
 }
 
@@ -230,7 +234,7 @@ h2 {
   width: 100%;
 }
 
-li {
+.puces {
   list-style-image: url(../images/puce.jpg);
   padding: 7px;
 }
