--- a/club_auto/css/style.scss
+++ b/club_auto/css/style.scss
@@ -99,7 +99,7 @@ address {
   width: 40px;
   border-radius: 50%;
   &:hover {
-    border: 1px solid #ffffff;
+    border: 2px solid #ffffff;
   }
 }
 .textOrange {
@@ -117,6 +117,9 @@ address {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 2;
   & a {
     height: 100%;
     text-decoration: none;
@@ -136,6 +139,7 @@ address {
     display: none;
     flex-direction: column;
     padding: 10px;
+    position: static;
   }
 }
 
@@ -205,7 +209,7 @@ h2 {
   width: 100%;
 }
 
-li {
+.puces {
   list-style-image: url(../images/puce.jpg);
   padding: 7px;
 }
