--- a/club_auto/css/style.css
+++ b/club_auto/css/style.css
@@ -38,6 +38,13 @@ header {
   font-size: 2.5rem;
   margin-left: 100px;
 }
+.brand a {
+  color: #ffffff;
+  text-decoration: none;
+}
+.brand a:hover {
+  text-decoration: underline;
+}
 @media screen and (max-width: 768px) {
   .brand {
     display: none;
