--- a/club_auto/css/style.scss
+++ b/club_auto/css/style.scss
@@ -32,6 +32,13 @@ header {
   font-weight: bold;
   font-size: 2.5rem;
   margin-left: 100px;
+  & a {
+    color: #ffffff;
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
   @media screen and (max-width: 768px) {
     display: none;
   }
